--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,11 +11,96 @@
 
     <title>Kenzie Food</title>
 </head>
-<body>
-    <header></header>
 
-    <body></body>
+<body>
+    <header>
+
+        <img src="./src/icons/logotipo.png" alt="Logotipo">
+        <form action="#">
+
+            <input type="text" name="pesquisa" placeholder="Pesquisar por produtos" id="">
+            <button>
+                <img src="./src/icons/icon-search.png" alt="Pesquisa">
+            </button>
+
+        </form>
+
+    </header>
+    <main>
+
+        <section>
+            <nav>
+
+                <button>Todos</button>
+
+                <button id="filterPanificadora">
+
+                    <img src="./src/icons/icon-padaria.png" alt="Icone Panificadora">
+                    Panificadora
+
+                </button>
+
+                <button id="id=filterFrutas">
+
+                    <img src="./src/icons/icon-frutas.png" alt="Icone Frutas">
+                    Frutas
+
+                </button>
+
+                <button id="id=filterBebidas">
+
+                    <img src="./src/icons/icon-bebidas.png" alt="Icones Bebidas">
+                    Bebidas
+
+                </button>
+
+            </nav>
+
+            <ul>
+                <li>
+                    <img src="./src/icons/Frame 5.png" alt="Imagem de teste">
+                    <span class="foodCategory">
+                        <img src="./src/icons/icon-padaria.png" alt="Icone Panificadora">
+                        Panificadora
+                    </span>
+                    <h3>Panqueca de banana com aveia</h3>
+                    <p>
+                        Esta receita serve muito bem 2 pessoas, deixa a gente bem satisfeito, se não tiver outra opção
+                        de café. Se tiver mais comida, como pães e frutas.
+                    </p>
+                    <div>
+                        <span class="price">R$ 20,00</span>
+                        <button class="addCart"><img src="./src/icons/icon-addcarrinho.png" alt="Icone addCart"></button>
+                    </div>
+                </li>
+            </ul>
+
+        </section>
+        <aside>
+
+            <div class="cartTitle">
+
+                <img src="./src/icons/icon-carrinho.png" alt="Icone Carrinho">
+
+                <h1>Carrinho</h1>
+
+            </div>
+
+            <div class="emptyCart">
+
+                <img src="./src/icons/icon-bag.png" alt="Icone de sacola">
+
+                <h3>Ops!</h3>
+
+                <span>Por enquanto não temos produtos no carrinho</span>
+
+            </div>
+
+        </aside>
+
+    </main>
 
     <script src="./src/js/script.js" type="module"></script>
 </body>
+
 </html>
