--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <header>
 
         <img src="./src/icons/logotipo.png" alt="Logotipo">
-        <form action="#">
 
+        <form action="#">
             <input type="text" name="pesquisa" placeholder="Pesquisar por produtos" id="">
+
             <button>
                 <img src="./src/icons/icon-search.png" alt="Pesquisa">
+
             </button>
 
         </form>
@@ -30,25 +32,21 @@
 
         <section>
             <nav>
-
                 <button>Todos</button>
 
                 <button id="filterPanificadora">
-
                     <img src="./src/icons/icon-padaria.png" alt="Icone Panificadora">
                     Panificadora
 
                 </button>
 
-                <button id="id=filterFrutas">
-
+                <button id="filterFrutas">
                     <img src="./src/icons/icon-frutas.png" alt="Icone Frutas">
                     Frutas
 
                 </button>
 
-                <button id="id=filterBebidas">
-
+                <button id="filterBebidas">
                     <img src="./src/icons/icon-bebidas.png" alt="Icones Bebidas">
                     Bebidas
 
@@ -62,15 +60,22 @@
                     <span class="foodCategory">
                         <img src="./src/icons/icon-padaria.png" alt="Icone Panificadora">
                         Panificadora
+
                     </span>
+
                     <h3>Panqueca de banana com aveia</h3>
+
                     <p>
                         Esta receita serve muito bem 2 pessoas, deixa a gente bem satisfeito, se não tiver outra opção
                         de café. Se tiver mais comida, como pães e frutas.
                     </p>
                     <div>
                         <span class="price">R$ 20,00</span>
-                        <button class="addCart"><img src="./src/icons/icon-addcarrinho.png" alt="Icone addCart"></button>
+
+                        <button class="addCart">
+                            <img src="./src/icons/icon-addcarrinho.png" alt="Icone addCart">
+
+                        </button>
                     </div>
                 </li>
             </ul>
@@ -79,7 +84,6 @@
         <aside>
 
             <div class="cartTitle">
-
                 <img src="./src/icons/icon-carrinho.png" alt="Icone Carrinho">
 
                 <h1>Carrinho</h1>
@@ -87,7 +91,6 @@
             </div>
 
             <div class="emptyCart">
-
                 <img src="./src/icons/icon-bag.png" alt="Icone de sacola">
 
                 <h3>Ops!</h3>
@@ -95,9 +98,7 @@
                 <span>Por enquanto não temos produtos no carrinho</span>
 
             </div>
-
         </aside>
-
     </main>
 
     <script src="./src/js/script.js" type="module"></script>
