Organizando Estrutura HTML-CSS

--- a/index.html
+++ b/index.html
@@ -90,12 +90,25 @@
 
             </div>
 
-            <div class="emptyCart">
-                <img src="./src/icons/icon-bag.png" alt="Icone de sacola">
+            <div class="listCart">
+                <div class="emptyCart">
+                    <img src="./src/icons/icon-bag.png" alt="Icone de sacola">
+                    <h3>Ops!</h3>
+                    <span>Por enquanto não temos produtos no carrinho</span>
 
-                <h3>Ops!</h3>
+                </div>
 
-                <span>Por enquanto não temos produtos no carrinho</span>
+                <ul>
+                    <img src="./src/icons/carrinho-imgTeste.png" alt="Img CarrinhoTeste">
+                    <div>
+                        <h3>Panqueca</h3>
+                        <span>Panificadora</span>
+                        <span>R$ 20,00</span>
+                    </div>
+                    <button>
+                        <img src="./src/icons/icon-trash.png" alt="Icone RemoveCart">
+                    </button>
+                </ul>
 
             </div>
         </aside>
