CSS-estructure + HTML detalhe

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
             <div class="listCart">
                 <div class="emptyCart">
+                   
                     <img src="./src/icons/icon-bag.png" alt="Icone de sacola">
                     <h3>Ops!</h3>
                     <span>Por enquanto não temos produtos no carrinho</span>
@@ -99,15 +100,20 @@
                 </div>
 
                 <ul>
-                    <img src="./src/icons/carrinho-imgTeste.png" alt="Img CarrinhoTeste">
-                    <div>
-                        <h3>Panqueca</h3>
-                        <span>Panificadora</span>
-                        <span>R$ 20,00</span>
-                    </div>
-                    <button>
-                        <img src="./src/icons/icon-trash.png" alt="Icone RemoveCart">
-                    </button>
+                    <li>
+
+                        <img src="./src/icons/carrinho-imgTeste.png" alt="Img CarrinhoTeste">
+                        <div>
+                            <h3>Panqueca</h3>
+                            <span class="categoria">Panificadora</span>
+                            <span class="price">R$ 20,00</span>
+                        </div>
+                        <button>
+                            <img src="./src/icons/icon-trash.png" alt="Icone RemoveCart">
+                        </button>
+                   
+                    </li>
+
                 </ul>
 
             </div>
