Implemento de filtros e Templates

--- a/index.html
+++ b/index.html
@@ -32,33 +32,33 @@
 
         <section>
             <nav>
-                <button>Todos</button>
+                <button class="filterTodos" id="buttonCategoria">Todos</button>
 
-                <button id="filterPanificadora">
-                    <img src="./src/icons/icon-padaria.png" alt="Icone Panificadora">
+                <button class="filterPanificadora" id="buttonCategoria">
+                    <img src="./src/icons/icon-Panificadora.png" alt="Icone Panificadora">
                     Panificadora
 
                 </button>
 
-                <button id="filterFrutas">
-                    <img src="./src/icons/icon-frutas.png" alt="Icone Frutas">
+                <button class="filterFrutas" id="buttonCategoria">
+                    <img src="./src/icons/icon-Frutas.png" alt="Icone Frutas">
                     Frutas
 
                 </button>
 
-                <button id="filterBebidas">
-                    <img src="./src/icons/icon-bebidas.png" alt="Icones Bebidas">
+                <button class="filterBebidas" id="buttonCategoria">
+                    <img src="./src/icons/icon-Bebidas.png" alt="Icones Bebidas">
                     Bebidas
 
                 </button>
 
             </nav>
 
-            <ul>
-                <li>
+            <ul id="vitrineProdutos">
+                <!-- <li>
                     <img src="./src/icons/Frame 5.png" alt="Imagem de teste">
                     <span class="foodCategory">
-                        <img src="./src/icons/icon-padaria.png" alt="Icone Panificadora">
+                        <img src="./src/icons/icon-Panificadora.png" alt="Icone Panificadora">
                         Panificadora
 
                     </span>
@@ -77,7 +77,7 @@
 
                         </button>
                     </div>
-                </li>
+                </li> -->
             </ul>
 
         </section>
@@ -99,7 +99,7 @@
 
                 </div>
 
-                <ul>
+                <ul id="vitrineCarrinho">
                     <li>
 
                         <img src="./src/icons/carrinho-imgTeste.png" alt="Img CarrinhoTeste">
