Finalizei implementação de adicionar e remover produtos

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
 
                 <ul id="vitrineCarrinho">
-                    <li>
+                    <!-- <li>
 
                         <img src="./src/icons/carrinho-imgTeste.png" alt="Img CarrinhoTeste">
                         <div>
@@ -112,10 +112,22 @@
                             <img src="./src/icons/icon-trash.png" alt="Icone RemoveCart">
                         </button>
                    
-                    </li>
+                    </li> -->
 
                 </ul>
+                <div class="productAmount">
 
+                    <h4>Quantidade</h4>
+                    <span class="productAcumulator"></span>
+
+                </div>
+
+                <div class="totalAmout">
+
+                    <h4>Total</h4>
+                    <span class="totalPrice"></span>
+
+                </div>
             </div>
         </aside>
     </main>
