Implementando funcao total, quantidade

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
 
             <div class="listCart">
-                <div class="emptyCart">
+                <div class="emptyCartNone" id="cartProducts">
                    
                     <img src="./src/icons/icon-bag.png" alt="Icone de sacola">
                     <h3>Ops!</h3>
@@ -115,14 +115,14 @@
                     </li> -->
 
                 </ul>
-                <div class="productAmount">
+                <div class="emptyCart" id="productAmount">
 
                     <h4>Quantidade</h4>
                     <span class="productAcumulator"></span>
 
                 </div>
 
-                <div class="totalAmout">
+                <div class="emptyCart" id="totalAmount">
 
                     <h4>Total</h4>
                     <span class="totalPrice"></span>
