--- a/index.html
+++ b/index.html
@@ -29,27 +29,31 @@
     </header>
     <main>
         <form class="modalNone" id="ModalProduct">
-            <img src="./src/icons/icon-closeModal.png" alt="Fechar" class="ModalClose">
-                <div>
-                    <select name="" id="selectProduct">
-                        <!-- <option value="default" selected>Selecione o Produto</option> -->
-                    </select>
+            <div class="DataProducts">
+                <h3>Produtos Cadastrados:</h3>
+                <img src="./src/icons/icon-closeModal.png" alt="Fechar" class="ModalClose">
+            </div>
+                <div class="ModalProductBox">
+                    <div class="Modal-Select">
+                        <select name="" id="selectProduct"></select>
+                        <img src="./src/icons/icon-trashModal.png" alt="Remover" id="removeProduct">
+                    </div>
                     <label for="">Nome do Produto:</label>
                     <input type="text" placeholder="Nome do Produto" id="NameProduct">
                 </div>
-                <div>
+                <div class="ModalProductBox">
                     <label for="">Preço do Produto:</label>
                     <input type="number" placeholder="Preço" id="PriceProduct">
                 </div>
-                <div>
+                <div class="ModalProductBox">
                     <label for="">Categoria do Produto:</label>
                     <input type="text" placeholder="Categoria" id="CategoryProduct">
                 </div>
-                <div>
+                <div class="ModalProductBox">
                     <label for="">Link - Imagem do Produto:</label>
                     <input type="text" placeholder="Link Imagem" id="ImgProduct">
                 </div>
-                <div>
+                <div class="ModalProductBox">
                     <label for="">Descrição do Produto:</label>
                     <input type="text" placeholder="Descrição" id="DescriptionProduct">
                 </div>
@@ -124,9 +128,7 @@
     </main>
 
     <footer>
-        <h4 class="adminProdutos adminGreen" id="AddProduct">Adicionar Produto</h4>
-        <h4 class="adminProdutos adminYellow">Alterar Produto</h4>
-        <h4 class="adminProdutos adminRed">Remover Produto</h4>
+        <h4 class="adminProdutos adminGreen" id="AddProduct">Configurações de Produtos</h4>
     </footer>
 
     <script src="./src/js/script.js" type="module"></script>
